@@ -177,6 +177,7 @@ ok $minion->unlock('baz'), 'unlocked';
 ok !$minion->unlock('baz'), 'not unlocked again';
 
 # List locks
+is $minion->stats->{active_locks}, 1, 'one active lock';
 $results = $minion->backend->list_locks(0, 2);
 is $results->{locks}[0]{name},      'yada',       'right name';
 like $results->{locks}[0]{expires}, qr/^[\d.]+$/, 'expires';
@@ -186,6 +187,7 @@ $minion->unlock('yada');
 $minion->lock('yada', 3600, {limit => 2});
 $minion->lock('test', 3600, {limit => 1});
 $minion->lock('yada', 3600, {limit => 2});
+is $minion->stats->{active_locks}, 3, 'three active locks';
 $results = $minion->backend->list_locks(1, 1);
 is $results->{locks}[0]{name},      'test',       'right name';
 like $results->{locks}[0]{expires}, qr/^[\d.]+$/, 'expires';
@@ -216,6 +218,13 @@ ok !$minion->guard('foo', 3600), 'not locked again';
 undef $guard;
 ok $minion->guard('foo', 3600, {limit => 1}), 'locked again';
 ok $minion->guard('foo', 3600, {limit => 1}), 'locked again';
+ok $guard     = $minion->guard('bar', 3600, {limit => 2}), 'locked';
+ok my $guard2 = $minion->guard('bar', 0,    {limit => 2}), 'locked';
+ok my $guard3 = $minion->guard('bar', 3600, {limit => 2}), 'locked';
+undef $guard2;
+ok !$minion->guard('bar', 3600, {limit => 2}), 'not locked again';
+undef $guard;
+undef $guard3;
 
 # Reset
 $minion->reset->repair;
@@ -253,6 +262,7 @@ is $stats->{failed_jobs},      0, 'no failed jobs';
 is $stats->{finished_jobs},    0, 'no finished jobs';
 is $stats->{inactive_jobs},    0, 'no inactive jobs';
 is $stats->{delayed_jobs},     0, 'no delayed jobs';
+is $stats->{active_locks},     0, 'no active locks';
 is $stats->{uptime}, undef, 'uptime is undefined';
 SKIP: { skip 'Minion workers do not support fork emulation', 1 if HAS_PSEUDOFORK;
 $worker = $minion->worker->register;
